# opentelemetry-handson

./: Cargo.toml  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml
rust-python-propagation/: README.md  main.py
rust-simple/: Cargo.toml  README.md
rust-simple/src/: main.rs
