[package]
name = "opentelemetry-handson"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.11.0", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.18.0", default-features = false, features = ["tracing-log", "metrics"] }
tracing-subscriber = "0.3.16"
opentelemetry_sdk = "0.18.0"
